--- a/src/app/views/inicio/inicio.component.html
+++ b/src/app/views/inicio/inicio.component.html
@@ -23,19 +23,19 @@
                     <div class="col-lg-4 mb-5 mb-lg-0">
                         <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3"><i class="bi bi-collection"></i></div>
                         <h2 class="h4 fw-bolder">Consultorías.</h2>
-                        <p>En este apartado podras elegir al abogado que mas se adapte a tus necesidades para poder resolver tus dudas legales.</p>
+                        <p>En este apartado podrás elegir al abogado que más se adapte a tus necesidades para poder resolver tus dudas legales.</p>
 
                     </div>
                     <div class="col-lg-4 mb-5 mb-lg-0">
                         <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3"><i class="bi bi-building"></i></div>
                         <h2 class="h4 fw-bolder">Crea tu pregunta.</h2>
-                        <p>En este apartado podras generar una o mas preguntas para que nuestros abogados las puedan responder y aclarar tus dudas en el menor tiempo posible.</p>
+                        <p>En este apartado podrás generar una o más preguntas para que nuestros abogados las puedan responder y aclarar tus dudas en el menor tiempo posible.</p>
 
                     </div>
                     <div class="col-lg-4">
                         <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3"><i class="bi bi-toggles2"></i></div>
                         <h2 class="h4 fw-bolder">Preguntas frecuentes.</h2>
-                        <p>En este apartados podras ver una lista con las preguntas mas frecuentes que tienen nuestros usuarios.</p>
+                        <p>En estos apartados podrás ver una lista con las preguntas más frecuentes que tienen nuestros usuarios.</p>
 
                     </div>
                 </div>
@@ -45,7 +45,7 @@
         <section class="bg-light py-5 border-bottom">
             <div class="container px-5 my-5">
                 <div class="text-center mb-5">
-                    <h2 class="fw-bolder">Unete a nuestra membresia.</h2>
+                    <h2 class="fw-bolder">Únete a nuestra membresía.</h2>
                     <p class="lead mb-0">Beneficios ilimitados y respuestas al instante.</p>
                 </div>
                 <div class="row gx-5 justify-content-center">
@@ -61,11 +61,11 @@
                                 <ul class="list-unstyled mb-4">
                                     <li class="mb-2">
                                         <i class="bi bi-check text-primary"></i>
-                                        <strong>3 Preguntas gratis</strong>
+                                        <strong>3 preguntas gratis</strong>
                                     </li>
                                     <li class="mb-2">
                                         <i class="bi bi-check text-primary"></i>
-                                        1 asesoria completamente gratis
+                                        1 asesoría completamente gratis
                                     </li>
                                     <li class="mb-2">
                                         <i class="bi bi-check text-primary"></i>
@@ -73,24 +73,13 @@
                                     </li>
                                     <li class="mb-2">
                                         <i class="bi bi-check text-primary"></i>
-                                        Consultorias pagadas ilimitadas
+                                        Consultorías pagadas ilimitadas
                                     </li>
-                                    <li class="mb-2 text-muted">
+                                    <li class="mb-2">
                                         <i class="bi bi-x"></i>
-                                        asdasdasdasdasd
+                                        Presupuestos gratis ilimitados
                                     </li>
-                                    <li class="mb-2 text-muted">
-                                        <i class="bi bi-x"></i>
-                                        Dedicated support
-                                    </li>
-                                    <li class="mb-2 text-muted">
-                                        <i class="bi bi-x"></i>
-                                        Free linked domain
-                                    </li>
-                                    <li class="text-muted">
-                                        <i class="bi bi-x"></i>
-                                        Monthly status reports
-                                    </li>
+
                                 </ul>
                                 
                             </div>
@@ -105,41 +94,29 @@
                                     Pro
                                 </div>
                                 <div class="mb-3">
-                                    <span class="display-4 fw-bold">$9</span>
+                                    <span class="display-4 fw-bold">$10</span>
                                     <span class="text-muted">/ mo.</span>
                                 </div>
                                 <ul class="list-unstyled mb-4">
                                     <li class="mb-2">
                                         <i class="bi bi-check text-primary"></i>
-                                        <strong>5 users</strong>
+                                        <strong>Preguntas gratis ilimitadas</strong>
                                     </li>
                                     <li class="mb-2">
                                         <i class="bi bi-check text-primary"></i>
-                                        5GB storage
+                                       3 asesorias mensuales
                                     </li>
                                     <li class="mb-2">
                                         <i class="bi bi-check text-primary"></i>
-                                        Unlimited public projects
+                                       Toda la base de datos de preguntas frecuentes
                                     </li>
                                     <li class="mb-2">
                                         <i class="bi bi-check text-primary"></i>
-                                        Community access
+                                        Descuentos despues de la tercera aseoria mensual
                                     </li>
                                     <li class="mb-2">
                                         <i class="bi bi-check text-primary"></i>
-                                        Unlimited private projects
-                                    </li>
-                                    <li class="mb-2">
-                                        <i class="bi bi-check text-primary"></i>
-                                        Dedicated support
-                                    </li>
-                                    <li class="mb-2">
-                                        <i class="bi bi-check text-primary"></i>
-                                        Free linked domain
-                                    </li>
-                                    <li class="text-muted">
-                                        <i class="bi bi-x"></i>
-                                        Monthly status reports
+                                        Presupuestos personalizados y con descuentos
                                     </li>
                                 </ul>
                                 
