--- a/src/app/views/preguntas/preguntas.component.html
+++ b/src/app/views/preguntas/preguntas.component.html
@@ -1,65 +1,49 @@
 <section>
     <h3 class="text-center mb-4 pb-2 text-primary fw-bold">PREGUNTAS FRECUENTES</h3>
     <p class="text-center mb-5">
-      Eleccion de las preguntas mas recibidas este mes
+      Elección de las preguntas mas recibidas este mes.
     </p>
   
     <div class="row">
       <div class="col-md-6 col-lg-4 mb-4">
-        <h6 class="mb-3 text-primary"><i class="far fa-paper-plane text-primary pe-2"></i> A simple
-          question?</h6>
+        <h6 class="mb-3 text-primary"><i class="far fa-paper-plane text-primary pe-2"></i> ¿Puedo pedir el recurso de nulidad?</h6>
         <p>
-          We work with top payment companies which guarantees
-          your
-          safety and
-          security. All billing information is stored on our payment processing partner.
+          En este sentido, se podría pedir la nulidad del juicio, si, por ejemplo, la prueba utilizada en juicio para condenar a una persona fue obtenida mediante un allanamiento a su casa, sin la debida autorización del juez, ya que nuestra constitución y los tratados internacionales aseguran el derecho a la privacidad.</p>
+      </div>
+  
+      <div class="col-md-6 col-lg-4 mb-4">
+        <h6 class="mb-3 text-primary"><i class="fas fa-pen-alt text-primary pe-2"></i> ¿Puedo pedir la indemnización de los perjuicios causados?</h6>
+        <p>
+          La Indemnización de Perjuicios o indemnización por daños corresponde a la acción que puede impetrar, ya sea el acreedor contractual o la víctima de un daño, para exigir del deudor o causante le repare en su patrimonio aquellos perjuicios que ha debido sufrir.
         </p>
       </div>
   
       <div class="col-md-6 col-lg-4 mb-4">
-        <h6 class="mb-3 text-primary"><i class="fas fa-pen-alt text-primary pe-2"></i> A question
-          that
-          is longer then the previous one?</h6>
-        <p>
-          You can cancel your subscription anytime in
-          your
-          account. Once the subscription is
-          cancelled, you will not be charged next month.
-        </p>
-      </div>
-  
-      <div class="col-md-6 col-lg-4 mb-4">
-        <h6 class="mb-3 text-primary"><i class="fas fa-user text-primary pe-2"></i> A simple
-          question?
+        <h6 class="mb-3 text-primary"><i class="fas fa-user text-primary pe-2"></i> ¿Este contrato es válido?
         </h6>
         <p>
-          Currently, we only offer monthly subscription. You can upgrade or cancel your monthly
-          account at any time with no further obligation.
+          Un contrato escrito válido debe tener los nombres legales completos de las partes y sus firmas correspondientes. La firma también debe contener la fecha para indicar cuándo se celebró el contrato. Un contrato también puede ser válido con firmas electrónicas. Hay diferentes tipos de firmas electrónicas.
         </p>
       </div>
   
       <div class="col-md-6 col-lg-4 mb-4">
-        <h6 class="mb-3 text-primary"><i class="fas fa-rocket text-primary pe-2"></i> A simple
-          question?
+        <h6 class="mb-3 text-primary"><i class="fas fa-rocket text-primary pe-2"></i> ¿Cúal es la infracción que cometo al beber en vía pública?
         </h6>
         <p>
-          Yes. Go to the billing section of your dashboard and update your payment information.
+          LEY 21363 Firma electrónica ESTABLECE NORMAS EN MATERIA DE COMERCIALIZACIÓN Y PUBLICIDAD DE BEBIDAS ALCOHÓLICAS, Y OTRAS QUE INDICA.
         </p>
       </div>
   
       <div class="col-md-6 col-lg-4 mb-4">
-        <h6 class="mb-3 text-primary"><i class="fas fa-home text-primary pe-2"></i> A simple
-          question?
+        <h6 class="mb-3 text-primary"><i class="fas fa-home text-primary pe-2"></i> ¿Como puedo liberarme de una deuda del CAE?
         </h6>
-        <p> We do not issue full or partial refunds for any
-          reason.</p>
+        <p> Estar demandado por no pago del cae, ya sea no haber pagado nunca una sola cuota o dejar de pagar en caso de estarlo haciendo. 2. Que no te notifiquen la demanda; el receptor judicial es la única persona que puede notificarte válidamente una demanda ejecutiva.</p>
       </div>
   
       <div class="col-md-6 col-lg-4 mb-4">
-        <h6 class="mb-3 text-primary"><i class="fas fa-book-open text-primary pe-2"></i> Another
-          question that is longer than usual</h6>
+        <h6 class="mb-3 text-primary"><i class="fas fa-book-open text-primary pe-2"></i> ¿Puedo obligar a cumplir algo pactado en un contrato viciado?</h6>
         <p>
-          Of course! We’re happy to offer a free plan to anyone who wants to try our service.
+          La posibilidad de dejar sin efecto un contrato válidamente celebrado está sujeta a que dicho contrato considere esa posibilidad, o bien cuando la empresa no cumpla con los términos y condiciones ofrecidas al consumidor o si hay un acuerdo de voluntades de quienes lo celebraron.
         </p>
       </div>
     </div>
