--- a/src/app/views/nueva-pregunta/nueva-pregunta.component.html
+++ b/src/app/views/nueva-pregunta/nueva-pregunta.component.html
@@ -2,7 +2,7 @@
 <div class="container text-center mb-5">
     <form>
         <div class="mb-3">
-            <h1>Crea una pregunta </h1>
+            <h1>Escriba su duda para que un asesor se contacte con usted. </h1>
             <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
         </div>
         <button type="submit" class="btn btn-dark">Enviar</button>
